# Factorysim

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: build.yaml  build.yml
jubilant_disco/: app.py  db.py  dbManager.py  models.py  observer.py  tables.py  test.py
tests/: confest.py  conftest.py  test_goods.py  test_person.py
