[project]
name = "jubilant_disco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "basedpyright>=1.31.2",
    "fastapi[standard]>=0.116.1",
    "flake8>=7.3.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "sqlmodel>=0.0.24",
]

[tool.uv]
package = true

[tool.uv.sources]
jubilant-disco = { workspace = true }

[dependency-groups]
dev = [
    "jubilant_disco",
]
    
[tool.basedpyright]
reportImportCycles = false
failOnWarnings = false
reportAny = false
reportExplicitAny = false

[tool.pytest.ini_options]
minversion = "8.4.1"
addopts = "-ra -q"
testpaths = [
    "tests",
]
